# gst-plugins-bad

./: meson_options.txt
docs/plugins/: gst-plugins-bad-plugins-sections.txt
gst/: meson.build
gst/audioeventemitters/: .gstentropyeventemitter.c.swp  .gstentropyeventemitter.h.swp  .gstpowereventemitter.c.swp  .gstpowereventemitter.h.swp  .gstspectrogramscope.c.swp  .gstspectrogramscope.h.swp  .ycm_extra_conf.py  Makefile.am  event_parser.py  gstentropyeventemitter.c  gstentropyeventemitter.h  gstpowereventemitter.c  gstpowereventemitter.h  meson.build  plugin.c
gst/audiovisualizers/: .gstspectrogramscope.c.swp  Makefile.am  gstspectrogram.c  gstspectrogram.h  gstspectrogramscope.c  gstspectrogramscope.h  meson.build  plugin.c
